bug fixed. excess space on mobile fixed

--- a/css/sections/hero.css
+++ b/css/sections/hero.css
@@ -61,10 +61,12 @@
 }
 
 .hero__content {
-    height: 60vh;
+    height: 60%;
     margin: auto;
-    padding: 0 7vw;
-    width: 100vw;
+    padding: 0 5%;
+    width: 100%;
+    max-width: 1200px;
+    box-sizing: border-box;
 }
 
 .hero__content h2 {
@@ -104,4 +106,4 @@
 
 .btn-active:hover {
     background-color: #779867;
-} 
+}
