--- a/css/sections/services.css
+++ b/css/sections/services.css
@@ -1,16 +1,20 @@
 .services {
+    height: 40vh;
     display: flex;
     flex-direction: column;
     width: 100%;
     justify-content: center;
+    box-sizing: border-box;
 }
 
 .services h2 {
     text-align: center;
+    margin-top: 60px;
+    margin-bottom: 20px;
 }
 
 .services__list {
-    height: 50vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
